# gateway-test

./: ChangeLog  Makefile.am  NEWS  VERSION  acinclude.m4  bootstrap.sh  configure.in
benchmarks/: Makefile.am
checks/: Makefile.am
debian/: changelog  control  diff.1.2.1
doc/: Makefile.am
doc/userguide/: userguide.xml
gw/: Makefile.am  bb_alog.c  bb_smscconn.c  meta_data.c  msg-decl.h  smsbox.c  smsc_at.c  smsc_cimd2.c  smsc_smpp.c  smsc_smpp.h  smscconn.c  smscconn_p.h  urltrans.c  urltrans.h  wap-appl.c  wap-events-def.h  wap_push_ppg_pushuser.c  wapbox.c  wml_compiler.c  wml_definitions.h  wsp-session.c  wsp-unit.c  wsp_state-decl.h  wtp.c  wtp.h  wtp_timer.c
gw/smsc/: smpp_pdu.c  smpp_pdu.h  smsc_smpp.c
gwlib/: Makefile.am  cfg.c  cfg.def  charset.c  conn.c  fdset.c  gw-regex.c  gw-regex.h  gw-semaphore.c  gw-semaphore.h  gwlib.h  gwpcre.c  gwpoll.c  gwthread-pthread.c  http.c  http.h  mime.c  mime.h  octstr.c  parse.c  pki.c  ssl.c  thread.c  xmlrpc.c  xmlrpc.h
radius/: Makefile.am
test/: Makefile.am  drive_smpp.c  test_pcre.c  test_regex.c
utils/: Makefile.am
wap/: Makefile.am
wmlscript/: Makefile.am  wsgram.c  wsgram.h  wsgram.y
