lib_LTLIBRARIES = libgwlib.la
libgwlib_la_SOURCES = \
	accesslog.c \
	cfg.c \
	charset.c \
	conn.c \
	counter.c \
	date.c \
	dbpool.c \
	dbpool_sdb.c \
	dbpool_mysql.c \
	dbpool_oracle.c \
	dbpool_pgsql.c \
	dbpool_sqlite.c \
	dict.c \
	fdset.c \
	gw-rwlock.c \
	gwlib.c \
	gwmem-check.c \
	gwmem-native.c \
	gwpoll.c \
	gwthread-pthread.c \
	gw_uuid.c \
	http.c \
	list.c \
	log.c \
	md5.c \
	mime.c \
	octstr.c \
	parse.c \
	gwpcre.c \
	pki.c \
	protected.c \
	gw-regex.c \
	gw-semaphore.c \
	socket.c \
	ssl.c \
	thread.c \
	utils.c \
	xmlrpc.c \
	accesslog.h \
	cfg.h \
	charset.h \
	conn.h \
	counter.h \
	date.h \
	dbpool.h \
	dbpool_p.h \
	dict.h \
	fdset.h \
	gw-rwlock.h \
	gwassert.h \
	gw-getopt.h \
	gwlib.h \
	gwmem.h \
	gwpoll.h \
	gwthread.h \
	gw_uuid.h \
	gw_uuid_types.h \
	http.h \
	list.h \
	log.h \
	md5.h \
	mime.h \
	octstr.h \
	parse.h \
	gwpcre.h \
	pki.h \
	protected.h \
	gw-regex.h \
	gw-semaphore.h \
	socket.h \
	ssl.h \
	thread.h \
	utils.h \
	xmlrpc.h \
	cfg.def \
	html-entities.def \
	gw-prioqueue.c \
	gw-prioqueue.h
