INCLUDES = -I. -I$(top_builddir) -I$(top_builddir)/gwlib -I$(top_builddir)/gw
LDADD = $(top_builddir)/gwlib/libgwlib.la $(top_builddir)/gw/libgw.la $(top_builddir)/wap/libwap.la

noinst_PROGRAMS = \
	decompile \
	fakesmsc \
	fakewap \
	test_boxc \
	test_cfg \
	test_cimd2 \
	test_dict \
	test_http \
	test_http_server \
	test_md5 \
	test_mem \
	test_msg \
	test_octstr_dump \
	test_octstr_format \
	test_octstr_immutables \
	test_ota \
	test_pdu \
	test_regex \
	test_udp \
	test_urltrans \
	test_uuid \
	test_wakeup \
	test_xmlrpc \
	timestamp \
	udpfeed \
	wapproxy

decompile_SOURCES = \
	decompile.c \
	decompile.h

# drive_smpp
# drive_wapbox
# test_dbpool
# test_headers
# test_mime
# test_mime_multipart
# test_pap
# test_pcre
# test_ppg
# test_radius_acct
# test_radius_pdu
# test_si
# test_sl
# test_smsc
# wml_tester
